updated with new endpoint and corrected db schema (#4)
